--- a/wowowo-chat-api/package.json
+++ b/wowowo-chat-api/package.json
@@ -28,7 +28,11 @@
     "@nestjs/websockets": "^11.1.8",
     "axios": "^1.13.1",
     "class-validator": "^0.14.2",
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
     "openai": "^6.7.0",
+    "pdf-parse": "^2.4.5",
+    "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   },
