--- a/wowowo-chat-api/package.json
+++ b/wowowo-chat-api/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-ws": "^11.1.8",
     "@nestjs/websockets": "^11.1.8",
     "axios": "^1.13.1",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
