refactor(ChatMessage): 修改了一下markdown的渲染格式

--- a/package.json
+++ b/package.json
@@ -20,9 +20,21 @@
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
     "element-plus": "^2.11.5",
+    "highlight.js": "^11.11.1",
+    "katex": "^0.16.27",
+    "mermaid": "^11.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gemoji": "^8.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "tailwindcss": "^4.1.16",
+    "unified": "^11.0.5",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vue-virtual-scroller": "^2.0.0-beta.8"
