--- a/package.json
+++ b/package.json
@@ -25,21 +25,13 @@
     "mermaid": "^11.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
-    "rehype-raw": "^7.0.0",
-    "rehype-sanitize": "^6.0.0",
-    "remark-breaks": "^4.0.0",
-    "remark-gemoji": "^8.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.2",
     "tailwindcss": "^4.1.16",
-    "unified": "^11.0.5",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.18.11",
     "@vitejs/plugin-vue": "^6.0.1",
