refactor: 修改了一下markdown的渲染方式

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "element-plus": "^2.11.5",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.27",
+    "markdown-it": "^14.1.0",
     "mermaid": "^11.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
@@ -33,6 +34,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
     "@tsconfig/node22": "^22.0.2",
+    "@types/highlight.js": "^9.12.4",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.18.11",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
