--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "highlight.js": "^11.11.1",
     "katex": "^0.16.27",
     "markdown-it": "^14.1.0",
+    "markdown-it-table": "^4.1.1",
     "mermaid": "^11.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
