refactor: 修改图片上传的后端处理

--- a/wowowo-chat-api/package.json
+++ b/wowowo-chat-api/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.11",
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/platform-ws": "^11.1.8",
     "@nestjs/websockets": "^11.1.8",
@@ -36,6 +37,7 @@
     "pdf-parse": "^2.4.5",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
+    "uuid": "^13.0.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
