--- a/wowowo-chat-api/package.json
+++ b/wowowo-chat-api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.1.11",
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/platform-ws": "^11.1.8",
+    "@nestjs/serve-static": "^5.0.4",
     "@nestjs/websockets": "^11.1.8",
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
@@ -35,6 +36,7 @@
     "multer": "^2.0.2",
     "openai": "^6.7.0",
     "pdf-parse": "^2.4.5",
+    "serve-static": "^2.2.1",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0",
