feat: 增加文档解析功能

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.2",
     "element-plus": "^2.11.5",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.27",
+    "mammoth": "^1.11.0",
     "markdown-it": "^14.1.0",
     "markdown-it-table": "^4.1.1",
     "mermaid": "^11.12.2",
