--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "lib": ["es2023", "dom"], // 或 "esnext"
-    "target": "es2020" // 确保 target 也支持 ES2020+
+    "lib": ["es2023", "dom"],
+    "target": "es2020"
   },
   "files": [],
   "references": [
