--- a/wowowo-chat-api/package.json
+++ b/wowowo-chat-api/package.json
@@ -9,9 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "set NODE_OPTIONS=--use-system-ca && nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "set NODE_OPTIONS=--use-system-ca && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,7 +28,8 @@
     "@nestjs/platform-ws": "^11.1.8",
     "@nestjs/serve-static": "^5.0.4",
     "@nestjs/websockets": "^11.1.8",
-    "axios": "^1.13.1",
+    "@octokit/rest": "^22.0.1",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
